[package]
name = "stap"
version = "0.1.0"
authors = ["J.R. Hill <hiljusti@so.dang.cool>"]
description = "Stap programming language (STAck Processor, ala Lisp)"
license = "GPL-2.0-only"
readme = "README.md"
homepage = "https://github.com/hiljusti/stap"
repository = "https://github.com/hiljusti/stap"

edition = "2021"

[dependencies]
pest = "2.5"
pest_derive = "2.5"
rail-lang = "0.24.1"
